spade-tests/src/snapshots/spade_tests__typeinference__multiplication_errors_if_overflow.snap
---
source: spade-tests/src/typeinference.rs
---
entity main(a: int<14>, b: int<16>) -> int<32> {
    a * b
}


error: Output type mismatch. Expected int<32>, got Number<30>
  ┌─ testinput:1:48
  │  
1 │   entity main(a: int<14>, b: int<16>) -> int<32> {
  │                                          ------- int<32> type specified here
  │ ╭────────────────────────────────────────────────^
2 │ │     a * b
  │ │     ----- Type 30 inferred here
3 │ │ }
  │ ╰─^ Found type Number<30>
  │  
  = note: Expected: 32
                in: int<32>
               Got: 30
                in: Number<30>
