spade-tests/src/snapshots/spade_tests__typeinference__negative_int_sizes_are_gracefully_disallowed.snap
---
source: spade-tests/src/typeinference.rs
---
extern fn make_an_int_appear<#uint N>() -> uint<N>;

fn test() {
    let x: uint<-1> = make_an_int_appear();
}


error: Expected type uint<-1>, got uint<#uint>
  ┌─ testinput:4:23
  │
1 │ extern fn make_an_int_appear<#uint N>() -> uint<N>;
  │                               ------ Type #uint inferred here
  ·
4 │     let x: uint<-1> = make_an_int_appear();
  │                 --    ^^^^^^^^^^^^^^^^^^^^ Expected uint<-1>
  │                 │      
  │                 Type -1 inferred here
  │
  = note: Expected: -1
                in: uint<-1>
               Got: #uint
                in: uint<#uint>
