spade-tests/src/snapshots/spade_tests__typeinference__negative_range_index_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: [int<8>; 6]) -> [int<8>; 6] {
    x[-1:5]
}


error: The start of a range cannot be negative
  ┌─ testinput:2:7
  │
2 │     x[-1:5]
  │       ^^ Inferred negative range start (-1)
