spade-tests/src/snapshots/spade_tests__typeinference__port_type_in_generic_is_an_error.snap
---
source: spade-tests/src/typeinference.rs
---
struct X {
    x: inv bool
}
entity takes_generic<T>(x: T) -> bool {true}

entity x(b: X) -> bool {
    inst takes_generic(b)
}


error: x.x is unused
  ┌─ testinput:4:25
  │
4 │ entity takes_generic<T>(x: T) -> bool {true}
  │                         ^ x.x is unused
  │
  = note: x.x is an inverted wire (`inv`) which must be set
  = The error is in a generic unit instantiated at
    ╰ testinput:7 takes_generic<X>
