spade-tests/src/snapshots/spade_tests__typeinference__range_index_too_small_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: [int<8>; 6]) -> [int<8>; 2] {
    x[0..1]
}


error: Output type mismatch. Expected [int<8>; 2], got [int<8>; 1]
  ┌─ testinput:1:40
  │  
1 │   fn test(x: [int<8>; 6]) -> [int<8>; 2] {
  │                              ----------- [int<8>; 2] type specified here
  │ ╭────────────────────────────────────────^
2 │ │     x[0..1]
  │ │     ------- Type 1 inferred here
3 │ │ }
  │ ╰─^ Found type [int<8>; 1]
  │  
  = note: Expected: 2
                in: [int<8>; 2]
               Got: 1
                in: [int<8>; 1]
